Bug 150620 - some mails show with unknown date in message list
Summary: some mails show with unknown date in message list
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: testcase, triaged
Depends on:
Blocks:
 
Reported: 2007-10-09 10:32 UTC by Jedd
Modified: 2009-08-21 22:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Date: 08 OCT 08 16:54:05 +0000 (1.38 KB, application/octet-stream)
2009-04-05 19:06 UTC, Martin Fitzpatrick
Details
Date: 08 OCT 05 17:58:28 UT (1.38 KB, application/octet-stream)
2009-04-05 19:06 UTC, Martin Fitzpatrick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jedd 2007-10-09 10:32:46 UTC
Version:            (using KDE KDE 3.5.7)
Installed from:    Debian testing/unstable Packages

Howdi,

I know there's a few other 'I've got a weird date format and kmail should handle it' bugs (most of which I think are a bit misguided - I'd be embarrassed if my mail client assumed a dash meant a zero), but this one looks slightly different to any other reports I could find on b.k.o.

My ISP (internode (.au)) is pretty good with things GNU/Linux-ish (mirrors, advocacy, etc) and I'm guessing they, like every other ISP, use this platform widely .. so it was odd when I saw an 'unknown' in the date field on just one of their recent billing notices.  I'm sure these are auto-generated, and the code doesn't change much from month to month, which just made it odder.

Anyhoo, I checked my stash of other invoices from these guys, and notice that I've had three similarly afflicted messages in the past three years - always in October.  This is particularly weird, and hints that the date format confuses something, somewhere, in kmail.

The relevant line from the headers of the four messages:
 Date: 08 OCT 05 17:58:28 UT
 Date: 08 OCT 06 21:51:27 UT
 Date: 18 OCT 06 11:27:29 UT
 Date: 08 OCT 07 18:01:46 UT

Last month's shows fine (given my locale - nsw.au) as 2007-09-09 8:06am in kmail, with the header showing:
 Date: 08 SEP 07 22:06:36 UT

Previous months are of the same format, and all show up fine.

This makes me suspect something weird with an octal interpretation, though being about as knowledgable with 2822 as I am with the kmail source, I can't comment further.

So I won't.  Other than to offer any other headers or more info if you want 'em.
Comment 1 Martin Fitzpatrick 2009-04-04 19:09:16 UTC
Jedd, thanks for the bug report. I cannot reproduce this on my local install (KDE 4.2.2) however it would be helpful if you could provide some further information.

It isn't clear from the bug report which of the headers is giving the unknown message. If I create dummy messages and paste any of those date strings into the message source and re-open it I get an 'unknown' error, but this appears to be because the date format isn't understood. It would be helpful if you are able to save a copy of the email (Save as..., after removing any personal information) and attach it to this bug report, together with another example of a working message with the same date format.

Thanks for your assistance.
Comment 2 Martin Fitzpatrick 2009-04-05 19:06:18 UTC
Additional information from the reporter:

Because the emails contain personally identifiable information only the date fields are reproduced below. The effect is reproducible by saving a received message as an .mbox file and then editing the headers into place using a text editor. See attached files.

2 messages with the following date fields are showing as dated 1970 in KDE3.5.9, and as 'unknown' in KDE4.2.2 (Kubuntu). In both case the date field is poorly formatted (notes below) but /used/ to work.

(correct-format) Thu, 09 Oct 2008 04:00:03 +1100

From accounts@internode.com.au Thu Jan  1 01:00:00 1970
Delivery-date: Thu, 09 Oct 2008 04:00:03 +1100
Date: 08 OCT 08 16:54:05 +0000

From accounts@internode.com.au Thu Jan  1 01:00:00 1970
Date: 08 OCT 05 17:58:28 UT

These are wrong (as far as I can tell) because the year is expressed
in a two-digit format. The UT (for UTC) should be recognised by standard. However this did used to work on 3.5.x.
Comment 3 Martin Fitzpatrick 2009-04-05 19:06:30 UTC
Created attachment 32630 [details]
Date: 08 OCT 08 16:54:05 +0000
Comment 4 Martin Fitzpatrick 2009-04-05 19:06:52 UTC
Created attachment 32631 [details]
Date: 08 OCT 05 17:58:28 UT
Comment 5 Martin Koller 2009-08-21 22:27:09 UTC
SVN commit 1014198 by mkoller:

BUG: 150620

fix lowercase typo which resulted in not detecting "OCT" as month


 M  +1 -1      dw_date.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014198
Comment 6 Martin Koller 2009-08-21 22:27:44 UTC
SVN commit 1014199 by mkoller:

Backport r1014198 by mkoller from trunk to the 4.3 branch:

CCBUG: 150620

fix lowercase typo which resulted in not detecting "OCT" as month



 M  +1 -1      dw_date.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1014199