BUG: 150620

fix lowercase typo which resulted in not detecting "OCT" as month

svn path=/trunk/KDE/kdepim/; revision=1014198